webpack/css/objects/audio.sass
.plyr
  border: 1px solid #ccc

.plyr--audio
  max-width: 100%

.track-controls-and-info
  display: flex

.track-play-button
  width: 100px
  height: 40px
  background-color: #d26748
  color: #FFF
  border: none
  border-radius: 3px

.track-play-button:focus:not(:focus-visible)
  outline: none

.track-play-button .svg-icon
  width: 18px
  height: 18px

.track-details-info
  font-size: 0.9rem
  display: flex
  flex-grow: 1
  text-align: center
  align-items: center
  justify-content: center
  word-break: break-word

.footer-audio-player
  display: none
  position: sticky
  bottom: 0
  width: 100%

.footer-audio-player__visible
  display: flex

.footer-audio-player-cover
  width: 54px
  height: 54px
  display: flex
  text-align: center
  align-items: center
  justify-content: center

.footer-audio-player-cover a
  width: 50px
  height: 50px
  border: 2px solid #d26748

.footer-audio-player-cover img
  width: 50px
  height: 50px

.footer-audio-player-container
  flex: 1

.footer-audio-player-close-button
  width: 54px
  height: 54px
  display: flex
  text-align: center
  align-items: center
  justify-content: center
  background-color: #FFF
  background-image: none
  border: 2px solid #00b3ff
  color: #00b3ff

.footer-audio-player-close-button:focus:not(:focus-visible)
  outline: none

